k8s/admin-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
      - name: admin-server
        image: springcommunity/spring-petclinic-admin-server
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
---

apiVersion: v1
kind: Service
metadata:
  name: admin-server
spec:
  selector:
    app: admin-server
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30090
