k8s/customers-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
      - name: customers-service
        image: sciderus/spring-petclinic-customers-service:f0d0ab2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: customers-service
spec:
  selector:
    app: customers-service
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8081
