k8s/genai-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genai-service
  template:
    metadata:
      labels:
        app: genai-service
    spec:
      containers:
      - name: genai-service
        image: hytaty/spring-petclinic-genai-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
---

apiVersion: v1
kind: Service
metadata:
  name: genai-service
spec:
  selector:
    app: genai-service
  type: ClusterIP
  ports:
  - port: 8084
    targetPort: 8084
