k8s/grafana-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-server
  template:
    metadata:
      labels:
        app: grafana-server
    spec:
      containers:
      - name: grafana-server
        image: grafana/grafana
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: grafana-server
spec:
  selector:
    app: grafana-server
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
