k8s/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.9.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3100
---

apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  selector:
    app: loki
  type: LoadBalancer
  ports:
  - port: 3100
    targetPort: 3100
