k8s/prometheus-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
      - name: prometheus-server
        image: prom/prometheus
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
---

apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
spec:
  selector:
    app: prometheus-server
  type: LoadBalancer
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30090
