k8s/tracing-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracing-server
  template:
    metadata:
      labels:
        app: tracing-server
    spec:
      containers:
      - name: tracing-server
        image: openzipkin/zipkin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9411
---

apiVersion: v1
kind: Service
metadata:
  name: tracing-server
spec:
  selector:
    app: tracing-server
  type: LoadBalancer
  ports:
  - port: 9411
    targetPort: 9411
    nodePort: 30411
