k8s/vets-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
      - name: vets-service
        image: springcommunity/spring-petclinic-vets-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
---

apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  selector:
    app: vets-service
  type: NodePort
  ports:
  - port: 8083
    targetPort: 8083
    nodePort: 30083
