k8s/visits-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
      - name: visits-service
        image: springcommunity/spring-petclinic-visits-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
---

apiVersion: v1
kind: Service
metadata:
  name: visits-service
spec:
  selector:
    app: visits-service
  type: LoadBalancer
  ports:
  - port: 8082
    targetPort: 8082
