k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gateway.petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-petclinic-api-gateway
                port:
                  number: 8080

    - host: discovery.petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-petclinic-discovery-server
                port:
                  number: 8761

    - host: config.petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-petclinic-config-server
                port:
                  number: 8888

    - host: admin.petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-petclinic-admin-server
                port:
                  number: 9090
